<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pregunta5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thanos" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="110dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/btnOp1"
            android:layout_width="295dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:onClick="derrota"
            android:text="@string/pregunta5_op1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnOp2"
            android:layout_width="295dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:onClick="derrota"
            android:text="@string/pregunta5_op2" />

        <Button
            android:id="@+id/btnOp3"
            android:layout_width="295dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:onClick="derrota"
            android:text="@string/pregunta5_op3" />

        <Button
            android:id="@+id/btnOp4"
            android:layout_width="295dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:onClick="correcto"
            android:text="@string/pregunta5_op4" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="54dp"
        android:text="@string/pregunta5"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>